# winapi-resource-script

./: .prettierrc.yml  .vscodeignore  LICENSE  README.md  language-configuration.json  package.json  rc.tmLanguage.json  winapi-resource-script.code-workspace
language-server/: .clang-format  .editorconfig  CMakeLists.txt  README.md
language-server/src/: CMakeLists.txt  error_info.cpp  error_info.h  error_type.h  interpreter.cpp  interpreter.h  main.cpp  result.h  server.cpp  server.h  str_utils.cpp  str_utils.h  variant_cast.h
language-server/src/json/: CMakeLists.txt  array.cpp  array.h  boolean.cpp  boolean.h  decoder.cpp  decoder.h  element.cpp  element.h  element_like.h  element_type.h  json.h  null.cpp  null.h  number.cpp  number.h  object.cpp  object.h  string.cpp  string.h  to_json_string_helper.h  union.h
language-server/src/lsp/: CMakeLists.txt  message.cpp  message.h  message_kind.cpp  message_kind.h
language-server/test/: CMakeLists.txt  json_decoder_test.cpp
vscode-client/: .eslintrc.yml  CHANGELOG.md  README.md  package.json  rc.tmLanguage.json  tsconfig.json
vscode-client/src/: extension.ts
